[gd_scene load_steps=8 format=3 uid="uid://ccs5rmbyf7jwv"]

[ext_resource type="Texture2D" uid="uid://ba77ilkkxs1mj" path="res://assets/rooms/livingroomfloor1.png" id="1_0o5pc"]
[ext_resource type="Script" path="res://assets/scenes/mainmenu/main_menu.gd" id="1_5pbdv"]
[ext_resource type="Theme" uid="uid://cw1l2t36qm1h4" path="res://assets/font/font_theme.tres" id="2_1ealf"]
[ext_resource type="FontFile" uid="uid://ds6trkkj4lw5e" path="res://assets/font/alkhemikal/Alkhemikal.ttf" id="2_5byfl"]
[ext_resource type="Texture2D" uid="uid://m6jsst6k0yaf" path="res://assets/sprites/tv.png" id="2_h1a7b"]
[ext_resource type="SpriteFrames" uid="uid://ccy38fy47wo8q" path="res://assets/player/player.tres" id="5_hx6xj"]

[sub_resource type="LabelSettings" id="LabelSettings_f1r6q"]
font_size = 68

[node name="MainMenuLayer" type="CanvasLayer"]
process_mode = 3
layer = 5

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -240.0
offset_right = -320.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_0o5pc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(989, 647)
scale = Vector2(2, 2)
texture = ExtResource("2_h1a7b")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1440.0
offset_bottom = 960.0
script = ExtResource("1_5pbdv")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_top = 10.0
offset_right = -300.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5byfl")
text = "AN ESTRANGED ESTATE"
label_settings = SubResource("LabelSettings_f1r6q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../PlayButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../PlayButton")
text = "Continue"

[node name="PlayButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../ContinueButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../QuitButton")
theme = ExtResource("2_1ealf")
text = "PLAY"

[node name="QuitButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../ContinueButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../ContinueButton")
theme = ExtResource("2_1ealf")
text = "QUIT"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(160, 480)
scale = Vector2(2, 2)
sprite_frames = ExtResource("5_hx6xj")
autoplay = "default"

[connection signal="focus_exited" from="Menu/MarginContainer/VBoxContainer/ContinueButton" to="Menu" method="_button_exited"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/ContinueButton" to="Menu" method="_on_continue_button_pressed"]
[connection signal="focus_exited" from="Menu/MarginContainer/VBoxContainer/PlayButton" to="Menu" method="_button_exited"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/PlayButton" to="Menu" method="_on_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/PlayButton" to="Menu" method="_on_play_button_pressed"]
[connection signal="focus_exited" from="Menu/MarginContainer/VBoxContainer/QuitButton" to="Menu" method="_button_exited"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/QuitButton" to="Menu" method="_on_button_2_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/QuitButton" to="Menu" method="_on_quit_button_pressed"]
